--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,11 @@ main {
 html {
     scroll-behavior: smooth;
 }
+.gg{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 5%;
+}
 header {
     position: relative;
 }
@@ -212,7 +217,7 @@ header h1 {
    margin: 0!important;
 }
 .txt-apd{
-    padding-top: 10%;
+    padding-top: 5%;
     padding-bottom: 10%;
 }
 .textes p{
